--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,16 @@ services:
       - ./backend:/opt/backend
     working_dir: /opt/backend
     # command: python3 manage.py runserver 0.0.0.0:8000
+
+  sensor:
+    build: ./sensor/docker
+    restart: always
+    container_name: 'backsensorend'
+    # depends_on:
+    #   - database
+    # environment:
+    ports:
+      - "8001:8001"
+    volumes:
+      - ./sensor:/opt/sensor
+    working_dir: /opt/sensor
