--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,17 @@ services:
     working_dir: /opt/backend
     # command: python3 manage.py runserver 0.0.0.0:8000
 
+  # mqtt:
+  #     image: eclipse-mosquitto
+  #     container_name: mqtt
+  #     expose:
+  #       - 1883
+  #     ports:
+  #       - 1883:1883
+  #     restart: unless-stopped
+  #     volumes:
+  #       - ./broker:/opt/broker
+  
   broker:
     build: ./broker/docker
     restart: always
@@ -24,7 +35,10 @@ services:
     #   - database
     # environment:
     ports:
-      - "8002:8002"
+      - "1883:1883"
+    tty: true
+    expose:
+        - 1883
     volumes:
       - ./broker:/opt/broker
     working_dir: /opt/broker
