fix: mosquittoの設定ファイル修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,3 +42,4 @@ services:
     volumes:
       - ./broker:/opt/broker
     working_dir: /opt/broker
+    command: mosquitto -c /opt/broker/mosquitto.conf
