--- a/sensor/docker/Dockerfile
+++ b/sensor/docker/Dockerfile
@@ -10,6 +10,7 @@ ENV LC_ALL ja_JP.UTF-8
 ENV TZ JST-9
 
 RUN apt-get install -y vim less
+RUN apt-get install libcjson1 libmosquitto1 mosquitto-clients
 RUN pip install --upgrade pip
 RUN pip install --upgrade setuptools
 
