--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   # database:
   #   build: ./database
   #   container_name: 'database'
-  
+
   backend:
     build: ./backend/docker
     restart: always
@@ -15,7 +15,7 @@ services:
     volumes:
       - ./backend:/opt/backend
     working_dir: /opt/backend
-    # command: python3 manage.py runserver 0.0.0.0:8000
+    command: python3 manage.py runserver 0.0.0.0:8000
   
   broker:
     build: ./broker/docker
@@ -29,14 +29,18 @@ services:
     working_dir: /opt/broker
     command: mosquitto -c /opt/broker/mosquitto.conf
 
-  sensor_subscriber:
+  subscriber:
     build: ./sensor_subscriber/docker
     restart: always
-    container_name: 'sensor_subscriber'
+    container_name: 'subscriber'
+    depends_on:
+      - backend
+      - broker
     ports:
       - "1884:1884"
     tty: true
     volumes:
-      - ./sensor_subscriber:/opt/brsensor_subscriberoker
+      - ./sensor_subscriber:/opt/sensor_subscriber
     working_dir: /opt/sensor_subscriber
-    command: mosquitto_sub -d -h 192.168.1.18 -p 1883 -t kame/temp
+    # command: python /opt/sensor_subscriber/subscribe.py
+    # command: mosquitto_sub -d -h 192.168.1.18 -p 1883 -t kame/temp
