--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.12.4-bullseye
 USER root
 
+ENV FRONTEND_IP_ADDRESS 0.0.0.0
+ENV FRONTEND_PORT 8000
+
 RUN apt-get update
 RUN apt-get -y install locales && \
     localedef -f UTF-8 -i ja_JP ja_JP.UTF-8
@@ -9,11 +12,8 @@ ENV LANGUAGE ja_JP:ja
 ENV LC_ALL ja_JP.UTF-8
 ENV TZ JST-9
 
-RUN apt-get install -y vim less
-RUN pip install --upgrade pip
-RUN pip install --upgrade setuptools
+RUN mkdir -p /opt/frontend/
+COPY ./src/ /opt/frontend/
 
-RUN python -m pip install django
-RUN python -m pip install djangorestframework
-
-RUN mkdir -p /opt/backend
+WORKDIR /opt/frontend
+# CMD python3 manage.py runserver $BACKEND_IP_ADDRESS:$BACKEND_PORT
