--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ./backend/src:/opt/backend
   
   broker:
-    build: ./broker/docker
+    build: ./broker
     restart: always
     container_name: 'broker'
     ports:
