--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "@mui/x-data-grid": "^7.17.0",
+    "@mui/x-date-pickers": "^7.18.0",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
