--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.0",
     "@mui/x-data-grid": "^7.17.0",
     "@mui/x-date-pickers": "^7.18.0",
+    "chartjs-plugin-annotation": "^3.0.1",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
