--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -19,7 +19,8 @@
     "chartjs-plugin-annotation": "^3.0.1",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
